--- a/firmware/STM32_Workspace/MotherEnigine/.cproject
+++ b/firmware/STM32_Workspace/MotherEnigine/.cproject
@@ -63,8 +63,8 @@
 									<listOptionValue builtIn="false" value="__packed=&quot;__attribute__((__packed__))&quot;"/>
 									<listOptionValue builtIn="false" value="USE_HAL_DRIVER"/>
 									<listOptionValue builtIn="false" value="STM32F767xx"/>
-									<listOptionValue builtIn="false" value="LWIP_HTTPD_SSI=LWIP_HTTPD_SSI"/>
-									<listOptionValue builtIn="false" value="LWIP_HTTPD_CGI=LWIP_HTTPD_CGI"/>
+									<listOptionValue builtIn="false" value="LWIP_HTTPD_SSI=1"/>
+									<listOptionValue builtIn="false" value="LWIP_HTTPD_CGI=1"/>
 								</option>
 								<option id="fr.ac6.managedbuild.gnu.c.compiler.option.misc.other.1743683907" superClass="fr.ac6.managedbuild.gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-fmessage-length=0" valueType="string"/>
 								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c.227303777" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c"/>
@@ -299,9 +299,11 @@
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="refreshScope" versionNumber="2">
-		<configuration artifactName="${ProjName}" configurationName="Debug">
-			<resource resourceType="PROJECT" workspacePath="MotherEnigine"/>
+		<configuration configurationName="Debug">
+			<resource resourceType="PROJECT" workspacePath="/MotherEnigine"/>
 		</configuration>
+		<configuration configurationName="Release"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
