added string manipulation for SREC files.

--- a/PlugIn/Klanghbaitat_Maintenance/Builds/MacOSX/Klanghabitat_Maintenance.xcodeproj/xcshareddata/xcschemes/Klanghabitat_Maintenance - App.xcscheme
+++ b/PlugIn/Klanghbaitat_Maintenance/Builds/MacOSX/Klanghabitat_Maintenance.xcodeproj/xcshareddata/xcschemes/Klanghabitat_Maintenance - App.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "A9D322EF18A7E04CDE575F35"
-               BuildableName = "NewProject.app"
+               BuildableName = "Klanghabitat_Maintenance.app"
                BlueprintName = "Klanghabitat_Maintenance - App"
                ReferencedContainer = "container:Klanghabitat_Maintenance.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A9D322EF18A7E04CDE575F35"
-            BuildableName = "NewProject.app"
+            BuildableName = "Klanghabitat_Maintenance.app"
             BlueprintName = "Klanghabitat_Maintenance - App"
             ReferencedContainer = "container:Klanghabitat_Maintenance.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A9D322EF18A7E04CDE575F35"
-            BuildableName = "NewProject.app"
+            BuildableName = "Klanghabitat_Maintenance.app"
             BlueprintName = "Klanghabitat_Maintenance - App"
             ReferencedContainer = "container:Klanghabitat_Maintenance.xcodeproj">
          </BuildableReference>
