--- a/firmware/firmware quantum/Encoder/EncoderLeft.cfg
+++ b/firmware/firmware quantum/Encoder/EncoderLeft.cfg
@@ -18,7 +18,7 @@ set BOARDNAME NUCLEO-F031K6
 set ENABLE_LOW_POWER 1
 
 # Stop Watchdog counters when halt
-set STOP_WATCHDOG 0
+set STOP_WATCHDOG 1
 
 # STlink Debug clock frequency
 set CLOCK_FREQ 8000
@@ -40,3 +40,6 @@ set GDB_PORT 3341
 # BCTM CPU variables
 
 source [find target/stm32f0x.cfg]
+
+#SWV trace
+tpiu config disable 
