--- a/firmware/firmware quantum/DisplayBootloader/Debug/makefile
+++ b/firmware/firmware quantum/DisplayBootloader/Debug/makefile
@@ -1,5 +1,6 @@
 ################################################################################
 # Automatically-generated file. Do not edit!
+# Toolchain: GNU Tools for STM32 (9-2020-q2-update)
 ################################################################################
 
 -include ../makefile.init
@@ -31,6 +32,12 @@ endif
 
 -include ../makefile.defs
 
+OPTIONAL_TOOL_DEPS := \
+$(wildcard ../makefile.defs) \
+$(wildcard ../makefile.init) \
+$(wildcard ../makefile.targets) \
+
+
 BUILD_ARTIFACT_NAME := DisplayBootloader
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX := 
@@ -57,22 +64,22 @@ all: main-build
 main-build: DisplayBootloader.elf secondary-outputs
 
 # Tool invocations
-DisplayBootloader.elf: $(OBJS) $(USER_OBJS) /Users/christiansager/klanghabitat_quantum/firmware/firmware\ quantum/DisplayBootloader/STM32F469NIHX_FLASH.ld
+DisplayBootloader.elf: $(OBJS) $(USER_OBJS) /Users/christiansager/klanghabitat_quantum/firmware/firmware\ quantum/DisplayBootloader/STM32F469NIHX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-gcc -o "DisplayBootloader.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/Users/christiansager/klanghabitat_quantum/firmware/firmware quantum/DisplayBootloader/STM32F469NIHX_FLASH.ld" --specs=nosys.specs -Wl,-Map="DisplayBootloader.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
-default.size.stdout: $(EXECUTABLES)
+default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-size  $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-DisplayBootloader.list: $(EXECUTABLES)
+DisplayBootloader.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "DisplayBootloader.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-DisplayBootloader.bin: $(EXECUTABLES)
+DisplayBootloader.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "DisplayBootloader.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
